--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,14 @@ jobs:
             wget https://apt.llvm.org/llvm.sh
             chmod +x llvm.sh
             sudo ./llvm.sh 18
-            sudo apt-get install -y clang-format-18 clang-18  libsdl2-dev libsdl2-ttf-dev fonts-liberation
+            sudo apt-get install -y libsdl2-dev libsdl2-ttf-dev fonts-liberation
 
       - name: Cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
             path: build
             key: build-${{ runner.os }}-${{ github.run_id }}
+            save-always: true
             restore-keys: |
                 build-${{ runner.os }}-
 
