--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
             wget https://apt.llvm.org/llvm.sh
             chmod +x llvm.sh
             sudo ./llvm.sh 18
-            sudo apt-get install -y libsdl2-dev libsdl2-ttf-dev fonts-liberation
+            sudo apt-get install -y clang-format-18 libsdl2-dev libsdl2-ttf-dev fonts-liberation
 
       - name: Cache
         uses: actions/cache@v4
